--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 
     <body>
         <%= render 'layouts/header' %>
+        <% flash.each do |message_type, message| %>
+            <div class="flash flash-<%= message_type %>"><%= message %></div>
+        <% end %>
         <%= yield %>
         <%= render 'layouts/footer' %>
     </body>
