Add detailed user show with all tickets
Implements various routes.rb corrections to help this as well.

--- a/app/views/users/leaderboard.html.erb
+++ b/app/views/users/leaderboard.html.erb
@@ -11,7 +11,7 @@
         <%= usp[:index] %>
         </td>
         <td>
-            <%= usp[:user][:name] %>
+            <%= link_to usp[:user][:name], show_path(usp[:user]) %>
         </td>
         <td>
             <%= usp[:score] %>
