--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,23 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h2><%= @user.name %></h2>
+
+<table border="1">
+    <tr>
+        <th>Date</th>
+        <th>Type</th>
+        <th>Description and Link</th>
+        <th>Approval Status</th>
+        <th>Points</th>
+    </tr>
+<% @user_tickets.each do |ut| %>
+    <tr>
+        <td><%= ut.created_at.to_formatted_s(:short) %></td>
+        <td><%= ut.typeof %></td>
+        <td>
+            <%= link_to desc_link_text(ut), ut.link %></td>
+        </td>
+        <td><%= status_word(ut.status) %></td>
+        <td><%= ut.points %></td>
+    </tr>
+<% end %>
+</table>
+<%= will_paginate @user_tickets %>
