Add approval/deletion system for incoming tickets
Add new routes for the same, refactor tickets to add a partial
for easy rendering of tickets.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
 <table border="1">
     <tr>
         <th>Date</th>
+        <th>Name</th>
         <th>Type</th>
         <th>Description and Link</th>
         <th>Approval Status</th>
@@ -10,13 +11,7 @@
     </tr>
 <% @user_tickets.each do |ut| %>
     <tr>
-        <td><%= ut.created_at.to_formatted_s(:short) %></td>
-        <td><%= ut.typeof %></td>
-        <td>
-            <%= link_to desc_link_text(ut), ut.link %></td>
-        </td>
-        <td><%= status_word(ut.status) %></td>
-        <td><%= ut.points %></td>
+        <%= render ut %>
     </tr>
 <% end %>
 </table>
