Fix views and related files for upcoming stylistic changes
Add content_tag where necessary.
Change some pagination numbers.
Add footer.
Fix indentation at some places.

--- a/app/views/tickets/_ticket.html.erb
+++ b/app/views/tickets/_ticket.html.erb
@@ -1,8 +1,8 @@
-<td><%= ticket.created_at.to_formatted_s(:short) %></td>
-<td><%= ticket.user.name %></td>
-<td><%= ticket.typeof %></td>
-<td>
-    <%= link_to desc_link_text(ticket), ticket.link %></td>
-</td>
-<td><%= status_word(ticket.status) %></td>
-<td><%= ticket.points %></td>
+<%= content_tag :td, ticket.created_at.to_formatted_s(:short) %>
+<%= content_tag :td, ticket.user.name %>
+<%= content_tag :td, ticket.typeof %>
+<%= content_tag :td do %>
+  <%= link_to desc_link_text(ticket), ticket.link %>
+<% end %>
+<%= content_tag :td, status_word(ticket.status) %>
+<%= content_tag :td, ticket.points %>
