--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,23 @@
 <footer>
-    <nav>
+  <h4>Programming Club, IIT Kanpur</h4>
+  <section class="flex-footer">
+    <section>
+      <nav>
         <ul>
-            <li><%= link_to "Programming Club Site",   'http://pclub.in'  %></li>
-            <li><%= link_to "Github Repository", '#' %></li>
+          <li><%= link_to "Official Site", 'http://pclub.in'  %></li>
+          <li><%= link_to "Official Email", 'mailto:pclubiitk@gmail.com'  %></li>
+          <li><%= link_to "Contribute Code", 'https://github.com/milindl/leaderboard' %></li>
         </ul>
-    </nav>
+      </nav>
+    </section>
+    <section>
+      <nav>
+        <ul>
+          <li><%= link_to "GitHub", 'https://github.com/pclubiitk' %></li>
+          <li><%= link_to "Facebook", 'https://facebook.com/groups/pclubiitk' %></li>
+          <li><%= link_to "Twitter", 'https://twitter.com/pclubiitk' %></li>
+        </ul>
+      </nav>
+    </section>
+  </section>
 </footer>
