--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title><%= full_title(yield(:title)) %></title>
-        <%= csrf_meta_tags %>
+  <head>
+    <title><%= full_title(yield(:title)) %></title>
+    <%= csrf_meta_tags %>
 
-        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-        <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    </head>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-    <body>
-        <%= render 'layouts/header' %>
-        <% flash.each do |message_type, message| %>
-            <div class="flash flash-<%= message_type %>"><%= message %></div>
-        <% end %>
-        <%= yield %>
-        <%= render 'layouts/footer' %>
-    </body>
+   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  </head>
+
+  <body>
+    <%= render 'layouts/header' %>
+    <div id="maincontent">
+      <% flash.each do |message_type, message| %>
+      <div class="flash flash-<%= message_type %>"><%= message %></div>
+      <% end %>
+      <%= yield %>
+    </div>
+    <%= render 'layouts/footer' %>
+  </body>
 </html>
