--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,18 @@
 <h2><%= @user.name %></h2>
 
-<table border="1">
-    <tr>
-        <th>Date</th>
-        <th>Name</th>
-        <th>Type</th>
-        <th>Description and Link</th>
-        <th>Approval Status</th>
-        <th>Points</th>
-    </tr>
-<% @user_tickets.each do |ut| %>
-    <tr>
-        <%= render ut %>
-    </tr>
-<% end %>
+<table class="show-table">
+  <tr>
+    <th>Date</th>
+    <th>Name</th>
+    <th>Type</th>
+    <th>Description and Link</th>
+    <th>Approval Status</th>
+    <th>Points</th>
+  </tr>
+  <% @user_tickets.each do |ut| %>
+  <tr>
+    <%= render ut %>
+  </tr>
+  <% end %>
 </table>
 <%= will_paginate @user_tickets %>
