Add monthly ranks to leaderboard
fixes #13

This adds several scopes and cleans up the Tickets model, making the
addition of any time based (weekly, yearly, fortnightly etc) ranks
much easier in the future (addition of a scope and a few method calls).

--- a/app/views/users/leaderboard.html.erb
+++ b/app/views/users/leaderboard.html.erb
@@ -4,6 +4,7 @@
     <th>Rank</th>
     <th>Name</th>
     <th>Score</th>
+    <th>Monthly</th>
     <th>Title</th>
   </tr>
   <% @user_score_pairs.each do |usp| %>
@@ -13,6 +14,7 @@
     <%= link_to usp[:user][:name], show_path(usp[:user]) %>
     <% end %>
     <%= content_tag :td, usp[:score] %>
+    <%= content_tag :td, usp[:month_index] %>
     <%= content_tag :td, "TBA" %>
   </tr>
   <% end %>
