--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,11 +1,13 @@
 <% provide(:title, "Help") %>
-<h1>Help</h1>
-<p>Welcome to the PClub, IIT Kanpur's Leaderboard.</p>
+<h1 class="help_heading">HELP</h1>
+<div class="helpmanual">
+    <p>Welcome to the PClub, IIT Kanpur's Leaderboard.</p>
 
-<p>
-    Log your programming activities on the requests page - the one with the most
-    points gets goodies at the end of each month!
-</p>
-<p>
-    Alternatively, check out the current leaderboard
-</p>
+    <p>
+        Log your programming activities on the requests page - the one with the most
+        points gets goodies at the end of each month!
+    </p>
+    <p>
+        Alternatively, check out the current leaderboard
+    </p>
+</div>
