--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
     <div class ="logocontainer">
-        <%= link_to "Leaderboard", root_path,id: "logo" %>
+        <%= link_to "STAR BOARD", root_path,id: "logo" %>
     </div>
     <nav>
       <ul>
@@ -10,3 +10,6 @@
       </ul>
     </nav>
 </header>
+<div id='stars'></div>
+<div id='stars2'></div>
+<div id='stars3'></div>
